Fix spacings and positions

--- a/assets/css/3-sections/_classes.sass
+++ b/assets/css/3-sections/_classes.sass
@@ -10,10 +10,6 @@
       max-width: 500px
       margin: auto
 
-      @media (max-width: $desktop-width)
-        &:nth-child(1)
-          margin-bottom: 25px
-
       .text-container
         max-width: 85%
 
@@ -28,7 +24,6 @@
       .title
         font-size: 2.4rem
         color: $dark-gray
-        letter-spacing: 0.1rem
         text-transform: uppercase
         font-weight: 700
         margin-bottom: 15px
@@ -37,4 +32,14 @@
       .description
         color: $gray
         line-height: 2.4rem
+
+@media (max-width: $tablet-width)
+  .section-classes .container .center-column
+
+    &:nth-child(1)
+      margin-bottom: 20px
+
+    .text-container
+      max-width: none
+
 
