--- a/assets/css/3-sections/_contact.sass
+++ b/assets/css/3-sections/_contact.sass
@@ -25,7 +25,6 @@
         .title
           font-size: 2.4rem
           color: $dark-gray
-          letter-spacing: 0.1rem
           text-transform: uppercase
           font-weight: 700
           margin-bottom: 10px
@@ -41,7 +40,6 @@
 
         .subtitle
           color: $dark-gray
-          letter-spacing: 0.1rem
           text-transform: uppercase
 
 
@@ -53,7 +51,6 @@
       .title
         font-size: 2.4rem
         color: $dark-gray
-        letter-spacing: 0.1rem
         text-transform: uppercase
         font-weight: 700
         text-align: center
