--- a/assets/css/3-sections/_footer.sass
+++ b/assets/css/3-sections/_footer.sass
@@ -25,7 +25,6 @@
       font-size: 1.6rem
       font-weight: 700
       text-transform: uppercase
-      letter-spacing: 0.1rem
       margin: 0 0 15px 0
 
     .description
@@ -44,7 +43,6 @@
 
     .subtitle
       text-transform: uppercase
-      letter-spacing: 0.1rem
 
     .nowrap
       white-space: nowrap
