--- a/assets/css/3-sections/_taekwondo.sass
+++ b/assets/css/3-sections/_taekwondo.sass
@@ -15,12 +15,10 @@
 
       .subtitle
         font-size: 2.4rem
-        letter-spacing: 0.1rem
         color: $dark-gray
 
       .title
         font-size: 4.8rem
-        letter-spacing: 0.1rem
         font-weight: 700
         text-transform: uppercase
         color: $dark-gray
